# ds-bootcamp-udemy

./: pyproject.toml
01-Python-Crash-Course/: 01-Python Crash Course.ipynb  02-Python Crash Course Exercises.ipynb  03-Python Crash Course Exercises - Solutions.ipynb
02-Python-for-Data-Analysis-NumPy/: 01-NumPy Arrays.ipynb  04-Numpy Exercises.ipynb
03-Python-for-Data-Analysis-Pandas/: Excel_Sample.xlsxZone.Identifier
section 3/: hi.ipynb  section2.ipynb
